--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
+<link rel = "stylesheet" type = "text/css" href = "vismainair.github.io/Innova-Futura-Stylesheet/style.css">
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="script.js"></script>
     </head>
     <body>
-        <br>
-        <center>
+        <main>
+            <br>
             <div id="theheadhead">
                 <br>
                 <div id="thehead">
@@ -48,6 +48,6 @@
             <img src="islasabouttoshootbasketball.png" id="play">
             <br>
             </div>
-        </center>
+        </main>
     </body>
 </html>
