--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
     <body>
         <main>
             <br>
-            <div id="theheadhead">
+            <div>
                 <br>
-                <div id="thehead">
+                <div>
                     <br>
-                    <h1 id="yes" style="font-weight: bold;">ISLASBALL</h1>
+                    <h1 style="font-weight: bold;">ISLASBALL</h1>
                  </div>
                  <br>
             </div>
             <hr>
             <br>
             <div id="yed">
-                <br>                 <div id="tutorial">
+                <br>
+                <div>
                     <br>
                     <h1 style="font-weight: bold;">TUTORIAL</h1><hr style="font-weight: bold;">
                     <h2>1. press the "SHOOT" button</h2>
