--- a/poop.html
+++ b/poop.html
@@ -46,7 +46,7 @@
                 <h3 id="hello"></h3>
                 <h3 id="poopski"></h3>
                 <br>
-            <img src="islasabouttoshootbasketball.png" id="play">
+            <img src="islasabouttoshootbasketball.png" id="pla">
             <br>
             </div>
         </main>
