--- a/poop.html
+++ b/poop.html
@@ -43,7 +43,7 @@
                 <br>
                 <button class="btn btn-warning" onclick="reset()">RESET</button>
                 <br>
-                <h3 id="hello"></h3>
+                <h3 id="hllo"></h3>
                 <h3 id="poopski"></h3>
                 <br>
             <img src="islasabouttoshootbasketball.png" id="pla">
