--- a/poop.html
+++ b/poop.html
@@ -38,7 +38,7 @@
                     
                     <br>
                  </div><br>
-                 <button class="btn btn-success" id="shootbutton"  onclick="shoot()">SHOOT</button>
+                 <button class="btn btn-success" id="shootbutton"  onclick="work()">SHOOT</button>
                  <br>
                 <br>
                 <button class="btn btn-warning" onclick="reset()">RESET</button>
