--- a/poop.html
+++ b/poop.html
@@ -38,6 +38,8 @@
                     
                     <br>
                  </div><br>
+                <h3 id="score" class="btn btn-warning">your score will be displayed here</h3>
+                <br>
                  <button class="btn btn-success" id="shootbutton"  onclick="work()">SHOOT</button>
                  <br>
                 <br>
