--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                     
                     <br>
                  </div><br>
+                 <h3 id="score" class="btn btn-warning">your score will be displayed here</h3>
+                <br>
                  <button class="btn btn-success" id="shootbutton"  onclick="shoot()">SHOOT</button>
                  <br>
                 <br>
