--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     
                     <br>
                  </div><br>
-                 <h3 id="score" class="btn btn-warning">your score will be displayed here</h3>
+                 <h3 id="dop" class="btn btn-warning">your score will be displayed here</h3>
                 <br>
                  <button class="btn btn-success" id="shootbutton"  onclick="shoot()">SHOOT</button>
                  <br>
