--- a/poop.html
+++ b/poop.html
@@ -39,7 +39,7 @@
                  </div><br>
                 <h3 id="UTTP" class="btn btn-warning">your score will be displayed here</h3>
                 <br>
-                 <button class="btn btn-success" id="shootbutton"  onclick="work()">SHOOT</button>
+                 <button class="btn btn-success" id="shootbutton"  onclick="preventCheating()">SHOOT</button>
                  <br>
                 <br>
                 <button class="btn btn-warning" onclick="reset()">RESET</button>
